v0.3.0/_sources/projections/azim/azim_equidistant.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/azim/azim_equidistant.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_azim_azim_equidistant.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_azim_azim_equidistant.py:


Azimuthal Equidistant
=====================

The main advantage of this projection is that distances from the projection
center are displayed in correct proportions. Also directions measured from the
projection center are correct. It is very useful for a global view on locations
that lie within a certain distance or for comparing distances of different
locations relative to the projection center.

**e**\ *lon0/lat0*\ [*/horizon*]\ */scale* or
**E**\ *lon0/lat0*\ [*/horizon*]\ */width*

The projection type is set with **e** or **E**. *lon0/lat0* specifies the projection
center, and the optional parameter *horizon* specifies the maximum distance to the
projection center (i.e. the visibile portion of the rest of the world map) in
degrees <= 180° (default 180°). The size of the figure is set by *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 19-24



.. image:: /projections/azim/images/sphx_glr_azim_equidistant_001.png
    :alt: azim equidistant
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    coast [WARNING]: Fill/clip continent option (-G) may not work for this projection.
    coast [WARNING]: If the antipode (260/40) is in the ocean then chances are good it will work.
    coast [WARNING]: Otherwise, avoid projection center coordinates that are exact multiples of 80 degrees.

    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(projection="E-100/40/15c", region="g", frame="g", land="gray")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.716 seconds)


.. _sphx_glr_download_projections_azim_azim_equidistant.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: azim_equidistant.py <azim_equidistant.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: azim_equidistant.ipynb <azim_equidistant.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
